--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-    width: 650px;
-    margin: auto;
+    max-width: 650px;
+    width: 100%;
+    margin: 0 auto;
     background-color: #FFD873;
 }
 
