--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    box-sizing: border-box;
     max-width: 650px;
     width: 100%;
     margin: 0 auto;
@@ -6,6 +7,9 @@ body {
 }
 
 h1 {
+    width: 90%;
+    margin: 10px auto;
+    padding-bottom: 10px;
     font-family: 'Lato', sans-serif;
     text-align: center;
     border-bottom: 3px solid;
@@ -21,7 +25,7 @@ h1 {
     display: grid;
     grid-template: repeat(3, 160px) / repeat(3, 1fr);
     grid-gap: 15px;
-    margin: 10px 0;
+    margin: 10px 15px;
 }
 
 .square {
@@ -31,7 +35,7 @@ h1 {
     font-weight: bold;
     text-align: center;
     border: 1px solid black;
-    transition: background-color .1s linear;
+    transition: background-color .1s linear, box-shadow .1s linear;
     cursor: default;
 }
 
@@ -47,4 +51,24 @@ h1 {
     background: none;
     border: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 500px){
+    #message {
+        font-size: 1.5em;
+    }
+
+    .game_container {
+        grid-template-rows: repeat(3, 120px);
+    }
+
+    .square {
+        font-size: 75px;
+        transition: none;
+    }
+
+    .square:hover {
+        background-color: unset;
+        box-shadow: none;
+    }
 }
